--- a/ivy/org.muhkuh.tests.spi_flash/ivy.xml
+++ b/ivy/org.muhkuh.tests.spi_flash/ivy.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <ivy-module version="2.0">
-	<info organisation="org.muhkuh.tests" module="spi_flash" revision="${ARTIFACT_VERSION}"/>
+	<info organisation="org.muhkuh.tests" module="spi_flash" revision="${PROJECT_VERSION}"/>
 	<publications>
 		<artifact ext="zip" type="zip" packaging="zip" />
 	</publications>
 	<dependencies>
-		<dependency org="org.muhkuh.tools" name="flasher" rev="1.2.0"/>
+		<dependency org="org.muhkuh.tools" name="flasher" rev="1.1.0"/>
 	</dependencies>
 </ivy-module>
