--- a/ivy/org.muhkuh.tests.spi_flash/ivy.xml
+++ b/ivy/org.muhkuh.tests.spi_flash/ivy.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <ivy-module version="2.0">
-	<info organisation="org.muhkuh.tests" module="spi_flash" revision="${PROJECT_VERSION}"/>
+	<info organisation="org.muhkuh.tests" module="spi_flash" revision="${PROJECT_VERSION}">
+		<license name="GPL-2.0"/>
+		<ivyauthor name="Muhkuh team" url="https://github.com/muhkuh-sys" />
+		<description>This test case identified an SPI flash and optionally writes data to it.</description>
+	</info>
 	<publications>
 		<artifact ext="zip" type="zip" packaging="zip" />
 	</publications>
