--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ deploy:
   api_key:
     secure: GzyVx1ziywdrO8e6Q8I1djHxJoIVer8mdJbJT5EL6vOfMVAMi/O1C/1yav6QCgs2kmzzqKhF5S4+EO/Nkmv5SCtwfOyTu1Zm4+yktsWVxXcriXvr2ihR8e5yp58fvgIeox9c4UxR/IktYL3vRXpBIXNLBCXy2UkrylCAI4rFm3Q=
   file:
-    - targets/ivy/spi_flash.zip
+    - targets/ivy/parallel_flash.zip
     - targets/ivy/ivy.xml
   skip_cleanup: true
   on:
-    repo: muhkuh-sys/org.muhkuh.tests-spi_flash
+    repo: muhkuh-sys/org.muhkuh.tests-parallel_flash
     tags: true
