--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ install:
 # This is the command to build the whole project and pack the results in a distributable form.
 script:
   - python mbs/mbs
+
+
+# Deploy the artifacts to BinTray.
+after_success:
   - python ivy/deploy.py targets/artifacts.xml
 
 
